--- a/css/styles/work.css
+++ b/css/styles/work.css
@@ -4,7 +4,7 @@
   /* font-family: 'Quattrocento Sans', sans-serif; */
   --vibrant-orange: #f06543;
   --soft-white: #f8f9fa;
-  --desktop-padding-t: 7rem;
+  --desktop-padding-t: 6rem;
   --mobile-padding-X: 1rem;
 
   --numeric-values-font-size: 2.8em;
@@ -16,10 +16,10 @@ html,
 body {
   font-family: var(--font-family);
   /* scroll-behavior: smooth; */
-  scroll-behavior: auto;
+  scroll-behavior: smooth;
   /* scroll-snap-type: both; */
-  /* overflow-x: hidden; */
-  overflow-y: scroll;
+  overflow-x: hidden;
+  /* overflow-y: scroll; */
   /* font-size: 0.5rem; */
 }
 
@@ -87,6 +87,7 @@ header p.lead {
   margin-top: 1rem;
   font-weight: bold;
   font-size: 2.2rem;
+  text-align: center;
 }
 
 h1.display-1 {
@@ -97,7 +98,7 @@ h1.display-1 {
 main {
   background-color: var(--vibrant-orange);
   margin-top: var(--section-margin-y);
-  margin-bottom: var(--section-margin-y);
+  /* margin-bottom: var(--section-margin-y); */
   /* height: 70vh; */
   width: 100%;
   display: flex;
@@ -132,6 +133,10 @@ main div h2:nth-of-type(3) {
   padding-bottom: var(--desktop-padding-t);
 }
 
+/* main div p.lead {
+  padding: var(--mobile-padding-X);
+} */
+
 /* main div h2 span {
 } */
 
@@ -139,23 +144,31 @@ main div h2:nth-of-type(3) {
   display: inline-block;
   min-width: 20%;
   font-size: var(--numeric-values-font-size);
+  font-weight: 600;
 }
 
 .numericals-mobile {
   display: block;
   min-width: 20%;
   font-size: var(--numeric-values-font-size);
+  font-weight: 600;
 }
 
-/* #two {
-  min-width: 10%;
-} */
+/* PICTURE LINKS TO JOBS/SCHOOLS */
+#picture-links {
+  display: flex;
+  min-width: 100%;
+}
 
-/* main div:nth-of-type(1) {
-} */
+#picture-links div {
+  min-width: 50%;
+}
 
-@media only screen and (max-width: 980px) {
+@media only screen and (max-width: 992px) {
   header {
     align-items: flex-start;
+  }
+  header p.lead {
+    text-align: left;
   }
 }
