--- a/css/styles/work.css
+++ b/css/styles/work.css
@@ -157,11 +157,55 @@ main div h2:nth-of-type(3) {
 /* PICTURE LINKS TO JOBS/SCHOOLS */
 #picture-links {
   display: flex;
+  /* flex-wrap: wrap; */
+  align-items: center;
   min-width: 100%;
+  /* border: 2px solid black; */
 }
 
 #picture-links div {
   min-width: 50%;
+}
+
+.image {
+  position: relative;
+  /* width: 400px; */
+  /* height: 400px; */
+  width: 100%;
+  /* height: 80%; */
+}
+
+.image img {
+  width: 100%;
+  vertical-align: top;
+  height: 30rem;
+}
+
+.image::after {
+  content: '\A';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  transition: all 0.5s;
+  cursor: pointer;
+  -webkit-transition: all 0.5s;
+}
+.image:hover::after {
+  content: 'VIEW COLLEGE SITE';
+  color: white;
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  opacity: 1;
+}
+#jobs-image:hover::after {
+  content: 'VIEW JOBS IN THE AREA';
 }
 
 @media only screen and (max-width: 992px) {
@@ -170,5 +214,19 @@ main div h2:nth-of-type(3) {
   }
   header p.lead {
     text-align: left;
+  }
+
+  #picture-links {
+    display: flex;
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    min-width: 100%;
+    /* border: 2px solid black; */
+  }
+
+  .image img {
+    height: 20rem;
   }
 }
