--- a/css/styles/work.css
+++ b/css/styles/work.css
@@ -209,6 +209,17 @@ main div h2:nth-of-type(3) {
   content: 'VIEW JOBS IN THE AREA';
 }
 
+section:nth-of-type(2) {
+  margin-top: var(--desktop-padding-t);
+}
+
+article#job-application {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
 @media only screen and (max-width: 992px) {
   header {
     align-items: flex-start;
