--- a/css/styles/work.css
+++ b/css/styles/work.css
@@ -32,6 +32,7 @@ body {
 
 nav {
   animation: 1s ease-in 0s 1 fadeIn;
+  font-family: var(--font-family-quicksand);
 }
 
 .nav-item {
@@ -62,6 +63,15 @@ nav {
 .collapsing {
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 2px 2px 15px 15px;
+}
+
+.dropdown-menu li:nth-of-type(1) {
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+}
+.dropdown-menu li:nth-of-type(2) {
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
 }
 
 header {
@@ -240,6 +250,9 @@ footer div:nth-of-type(1) {
 /* } */
 
 @media only screen and (max-width: 992px) {
+  nav {
+    font-family: var(--font-family-quicksand);
+  }
   header {
     align-items: flex-start;
   }
