--- a/style.css
+++ b/style.css
@@ -47,6 +47,15 @@ nav {
   border-radius: 2px 2px 15px 15px;
 }
 
+.dropdown-menu li:nth-of-type(1) {
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+}
+.dropdown-menu li:nth-of-type(2) {
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
+}
+
 header {
   /* background: url(./images/reservoir.jpeg) no-repeat center center fixed; */
 
