--- a/style.css
+++ b/style.css
@@ -665,6 +665,8 @@ form div:nth-of-type(1) {
   header h1.landing-intro {
     font-size: 3.2rem;
     text-align: left !important;
+    position: relative;
+    top: 2rem;
   }
 
   header.h1.text-center {
