--- a/css/styles/learn.css
+++ b/css/styles/learn.css
@@ -71,3 +71,59 @@ ul.navbar-nav {
   padding-bottom: 1rem;
 }
 /****************************** END NAV STYLES ******************************/
+
+header {
+  height: 90vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: var(--soft-white); */
+  /* background: linear-gradient(
+      rgba(248, 249, 250, 0.55),
+      rgba(248, 249, 250, 0.55)
+    ),
+    url(../../images/stock/graduation.jpg); */
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url(../../images/stock/graduation.jpg);
+  /* background-size: contain no-repeat; */
+  /* background-size: stretch; */
+  background-attachment: fixed;
+  background-position: 50% 40%;
+}
+
+header h1,
+p {
+  position: relative;
+  top: 1rem;
+}
+
+header p.lead {
+  margin-top: 1rem;
+  font-weight: bold;
+  font-size: var(--header-paragraph-fs);
+  text-align: center;
+}
+
+h1.display-1 {
+  font-weight: 500;
+  font-size: var(--header-fs);
+}
+
+@media only screen and (max-width: 992px) {
+  nav {
+    font-family: var(--font-family-quicksand);
+  }
+  header {
+    align-items: flex-start;
+    background-position: 37% 45%;
+  }
+  h1.display-1 {
+    font-size: calc(var(--header-fs) / 1.5);
+  }
+  header p.lead {
+    text-align: left;
+    font-size: calc(var(--header-paragraph-fs) / 1.5);
+  }
+}
