--- a/css/styles/learn.css
+++ b/css/styles/learn.css
@@ -12,6 +12,9 @@
 
   --header-paragraph-fs: 2.2rem;
   --header-paragraph-fs-mobile: calc(var(--header-paragraph-fs) / 1.5);
+
+  --desktop-padding-t: 6rem;
+  --mobile-padding-X: 1rem;
 }
 
 html,
@@ -152,6 +155,19 @@ section aside {
 section aside img {
   max-width: 80%;
   height: auto;
+}
+
+footer {
+  background-color: var(--vibrant-orange);
+}
+footer div:nth-of-type(1) {
+  padding-top: var(--desktop-padding-t);
+  padding-bottom: var(--desktop-padding-t);
+}
+
+footer div a:hover {
+  position: relative;
+  top: 1px;
 }
 
 @media only screen and (max-width: 1399px) {
