--- a/css/styles/learn.css
+++ b/css/styles/learn.css
@@ -4,6 +4,7 @@
 
   --vibrant-orange: #f06543;
   --soft-white: #f8f9fa;
+  --dark-blue: #0d1b2a;
 
   --section-margin-y: 6rem;
 
@@ -73,6 +74,10 @@ ul.navbar-nav {
 .dropdown-menu li:nth-of-type(2) {
   padding-top: 0.5rem;
   padding-bottom: 1rem;
+}
+
+.active {
+  border-bottom: 2px solid var(--dark-blue);
 }
 /****************************** END NAV STYLES ******************************/
 
