Continued debugging for learn.html header background img

--- a/css/styles/learn.css
+++ b/css/styles/learn.css
@@ -179,6 +179,8 @@ footer div a:hover {
   header {
     /* background: url(../../images/stock/books.jpg); */
     background-size: cover;
+
+    background-attachment: local;
   }
 
   section aside img {
