--- a/css/styles/live.css
+++ b/css/styles/live.css
@@ -120,15 +120,51 @@ main {
   width: 100%;
   height: auto;
 }
-
-#test {
-  text-decoration: underline 0.05em;
-  /* text-decoration-thickness:  */
-}
-
 section {
   margin-top: var(--section-margin-y);
+  margin-bottom: var(--section-margin-y);
 }
+
+/* #h2-underline {
+  text-decoration: underline 0.05em;
+} */
+
+div#content-block {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 6rem;
+  padding-top: 3rem;
+}
+
+div#content-block aside {
+  flex-basis: 1;
+  width: calc(100% / 2.5);
+  font-family: var(--font-family);
+  /* background-color: aqua; */
+}
+
+#state-select-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+/* #content-block aside:nth-of-type(2) {
+} */
+
+/* #content-block aside:nth-of-type(2) div:nth-of-type(1) {
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url('../../images/meta/paper-map-larger.jpg');
+  background-size: contain;
+  background-attachment: local;
+  width: 100%;
+  max-height: 75%;
+
+} */
+
+/* select.form-select:not([size]):not([multiple]) {
+  height: auto !important;
+} */
 
 @media only screen and (max-width: 992px) {
   nav {
