--- a/css/styles/live.css
+++ b/css/styles/live.css
@@ -17,6 +17,8 @@
   --desktop-padding-t: 6rem;
   --mobile-padding-X: 1rem;
 
+  --character-limit: 60ch;
+
   --aside-padding: 4rem;
 }
 
@@ -92,9 +94,7 @@ header {
 
   background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
     url(../../images/stock/live.jpg);
-
   background-size: cover;
-
   background-attachment: local;
   margin-bottom: var(--section-margin-y);
 }
@@ -119,7 +119,6 @@ h1.display-1 {
 /********************************** END HEADER STYLES **********************************/
 main {
   font-family: var(--font-family-quicksand);
-  /* font-family: var(--font-family); */
   width: 100%;
   height: auto;
 }
@@ -128,9 +127,15 @@ section {
   margin-bottom: var(--section-margin-y);
 }
 
-/* #h2-underline {
-  text-decoration: underline 0.05em;
-} */
+#h2-header-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ch-60 {
+  max-width: var(--character-limit);
+}
 
 div#main-content-block {
   display: flex;
@@ -162,16 +167,7 @@ div#main-content-block aside:nth-of-type(2) {
     url(../../images/meta/paper-map-larger.jpg);
   background-size: contain;
   background-attachment: local;
-  /* display: flex;
-  align-items: flex-start;
-  justify-content: center; */
 }
-
-/* #neighborhood-quiz {
-  max-width: 100%;
-  height: auto;
-  align-self: center;
-} */
 
 .blur-box {
   backdrop-filter: blur(1px);
@@ -191,9 +187,7 @@ div#main-content-block aside:nth-of-type(2) {
 }
 
 #neighborhood-quiz-button {
-  /* justify-items: center; */
   margin-bottom: auto;
-  /* max-width: 10rem; */
   position: relative;
   bottom: 10%;
 }
@@ -214,22 +208,18 @@ aside div#form-box {
   justify-content: flex-end;
 }
 
-/* #content-block aside:nth-of-type(2) {
-} */
+footer {
+  background-color: var(--vibrant-orange);
+}
+footer div:nth-of-type(1) {
+  padding-top: var(--desktop-padding-t);
+  padding-bottom: var(--desktop-padding-t);
+}
 
-/* #content-block aside:nth-of-type(2) div:nth-of-type(1) {
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url('../../images/meta/paper-map-larger.jpg');
-  background-size: contain;
-  background-attachment: local;
-  width: 100%;
-  max-height: 75%;
-
-} */
-
-/* select.form-select:not([size]):not([multiple]) {
-  height: auto !important;
-} */
+footer div a:hover {
+  position: relative;
+  top: 1px;
+}
 
 @media only screen and (max-width: 992px) {
   nav {
@@ -247,7 +237,7 @@ aside div#form-box {
 
   div#main-content-block {
     display: flex;
-    /* justify-content: space-around; */
+
     flex-direction: column;
     align-items: center;
     padding-bottom: 6rem;
@@ -258,7 +248,6 @@ aside div#form-box {
     flex-basis: 1;
     width: calc(85%);
     font-family: var(--font-family);
-    /* background-color: aqua; */
   }
 
   div#main-content-block aside:nth-of-type(2) {
