--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 :root {
   --font-family: 'Quicksand', sans-serif;
   --font-family-two: 'Quattrocento Sans', sans-serif;
+
+  --header-font-size: 7.5rem;
+
   --soft-white: #f8f9fa;
 }
 
@@ -11,7 +14,6 @@ html {
 
 body,
 html {
-  /* font-family: 'Quicksand', sans-serif; */
   font-family: var(--font-family);
 }
 nav {
@@ -64,16 +66,12 @@ ul.navbar-nav {
 }
 
 header {
-  /* background: url(./images/reservoir.jpeg) no-repeat center center fixed; */
-
   background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
     url(./images/landing_placeholder.jpg) no-repeat center center fixed;
-  /* background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
-    url(./images/meta/paper-map-larger.jpg) no-repeat center center fixed; */
+
   /* filter: brightness(50%); */
   /* background-blend-mode: darken; */
-  /* background: url(./images/buhl_kite_field.png) no-repeat center -190px fixed; */
-  /* background: url(./images/buhl_activities_building.png) no-repeat center -190px fixed; */
+
   margin: 0 auto;
   height: 96vh;
   -webkit-background-size: cover;
@@ -86,11 +84,6 @@ header {
   background-attachment: local; */
 }
 
-/* header::after {
-  background: rgba(0, 0, 0, 0.5);
-  opacity: 1;
-} */
-
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -102,35 +95,16 @@ header {
 #header-div {
   position: relative;
   bottom: 5rem;
-  /* background: rgba(240, 101, 67, 1); */
 
   border-radius: 25px;
   max-width: fit-content;
 
-  /* transition: 1s ease-in 0s 1 appearFromNot; */
-  /* border: 1px solid black; */
   /* backdrop-filter: blur(50px); */
 }
 
-/* 0c3227 */
-
-/* @keyframes appearFromNot {
-  0% {
-    width: 10000px;
-    height: 1000px;
-  }
-  100% {
-    width: fit-content;
-    height: auto;
-  }
-} */
 .landing-intro {
-  /* font-family: Georgia, 'Times New Roman', Times, serif; */
-  /* font-family: Arial, Helvetica, sans-serif; */
-  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   font-family: var(--font-family-two);
   animation: 1s ease-in 0s 1 fadeIn;
-  /* animation: 1s ease-in 0s 1 appearFromNot; */
 
   backdrop-filter: blur(1px);
   /* -webkit-text-stroke: 2px black; */
@@ -140,11 +114,9 @@ header {
   padding-right: 1rem;
   padding-top: 0.6rem;
   padding-bottom: 0.6rem;
-  font-size: 7.5rem;
+
+  font-size: var(--header-font-size);
   font-weight: 900;
-  /* font-size: 2.2rem; */
-  /* color: #0d1b2a; */
-  /* filter: brightness(150%); */
 }
 #tour-btn-div {
   justify-self: flex-end !important;
@@ -178,8 +150,6 @@ section:nth-of-type(1) {
   left: 11rem;
 }
 .deskewed-box-work-section {
-  /* position: relative; */
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -192,7 +162,6 @@ section:nth-of-type(1) {
 
 .deskewed-box-work-section div {
   max-width: 63%;
-  /* max-width: 65ch; */
 }
 .deskewed-box-work-section div p {
   max-width: 65ch;
@@ -206,7 +175,6 @@ section:nth-of-type(1) {
 /****************************** SECTION 2 (AMENITIES) ******************************/
 
 section:nth-of-type(2) {
-  /* margin-top: 5rem; */
   background: url(./images/buhl_julia_bridge.png) no-repeat right;
 
   height: 96vh;
@@ -220,8 +188,6 @@ section:nth-of-type(2) {
   right: 11rem;
 }
 .deskewed-box-amenities-section {
-  /* position: relative; */
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -230,7 +196,7 @@ section:nth-of-type(2) {
   margin: 0 auto;
   position: relative;
   left: 2rem;
-  /* position: relative; */
+
   transform: skew(-20deg);
 }
 
@@ -249,7 +215,6 @@ section:nth-of-type(2) {
 /****************************************************************************************/
 /****************************** SECTION 3 (LIVE) ******************************/
 section:nth-of-type(3) {
-  /* margin-top: 20rem; */
   margin-top: 6rem;
   margin-bottom: 6rem;
   background: url(./images/family_1.jpg) no-repeat 20%;
@@ -266,8 +231,6 @@ section:nth-of-type(3) {
   left: 11rem;
 }
 .deskewed-box-live-section {
-  /* position: relative; */
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -280,7 +243,6 @@ section:nth-of-type(3) {
 
 .deskewed-box-live-section div {
   max-width: 63%;
-  /* max-width: 65ch; */
 }
 .deskewed-box-live-section div p {
   max-width: 65ch;
@@ -297,19 +259,14 @@ section:nth-of-type(4) {
   background-repeat: no-repeat;
   background-attachment: fixed;
 
-  /* box-sizing: border-box; */
-  /* border-top: 5px solid #0d1b2a93; */
-  /* border-bottom: 5px solid #0d1b2a93; */
   box-shadow: 2px 3px 38px 0px rgba(0, 0, 0, 0.75);
 
-  /* border-top: 10px solid #246eb9; */
   width: 100%;
   min-height: 35rem;
 }
 
 /****************************** SECTION 5 (Footer) ******************************/
 footer {
-  /* margin-top: 6rem; */
   min-height: 56vh;
   width: 100%;
   background: #f8f9fa;
@@ -330,18 +287,11 @@ footer div:nth-of-type(1) {
   margin-top: 6rem;
 
   width: calc(100% / 3);
-  /* position: relative; */
-  /* top: 2rem; */
 }
 
 #footer-email-input {
   margin-top: 4rem;
 }
-
-/* footer div:nth-of-type(1) form {
-  position: relative;
-  bottom: 1rem;
-} */
 
 footer div:nth-of-type(2) {
   width: calc(100% / 3);
@@ -371,8 +321,6 @@ form div:nth-of-type(1) {
 }
 
 .form-control {
-  /* border: none; */
-  /* border-bottom: 1px solid; */
   border-radius: 0;
 
   background-color: #f06543;
@@ -388,9 +336,7 @@ form div:nth-of-type(1) {
 
 .btn-outline-secondary {
   border-color: #362c28;
-  /* border-left: none;
-  border-right: none;
-  border-top: none; */
+
   background-color: #0d6efd;
   font-weight: 700;
   border-radius: 0;
@@ -403,7 +349,6 @@ form div:nth-of-type(1) {
   background-color: #f8f9fa;
   color: #362c28;
   border-color: black;
-  /* position: relative; */
 }
 
 #footerLinkList {
@@ -417,8 +362,6 @@ form div:nth-of-type(1) {
 #footerLinkList nav {
   margin: 0;
   margin-top: 1rem;
-
-  /* text-align: center; */
 }
 
 #footerLinkList nav ul li {
@@ -429,7 +372,6 @@ form div:nth-of-type(1) {
   text-decoration: none;
   color: #246eb9;
   font-size: 1.2em;
-  /* font-family: var(--font-family-two); */
 }
 
 .footer-list-item span {
@@ -445,13 +387,6 @@ form div:nth-of-type(1) {
 .footer-list-item:active {
   color: #f8f9fa;
 }
-
-/* #mobileFooter {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-} */
 
 /* .btn-outline */
 /*********************************** @Media Queries *************************************/
@@ -475,10 +410,6 @@ form div:nth-of-type(1) {
 
     background-attachment: local;
   }
-
-  /* section:nth-of-type(4) {
-    background: url(./images/windy_road.jpg) scroll 15% 20%;
-  } */
 
   footer h2 span {
     transform: rotate(0deg);
@@ -513,10 +444,9 @@ form div:nth-of-type(1) {
   }
 }
 @media only screen and (max-width: 1400px) {
-  /* section:nth-of-type(4) { */
-  /* background: url(./images/windy_road.jpg) scroll 15% 20%; */
-  /* display: none; */
-  /* } */
+  .landing-intro {
+    font-size: calc(var(--header-font-size) / 1.5);
+  }
 }
 
 @media only screen and (max-width: 1380px) {
