--- a/css/styles/learn.css
+++ b/css/styles/learn.css
@@ -1,6 +1,6 @@
 :root {
-  --font-family: 'Quattrocento Sans', sans-serif;
-  --font-family-quicksand: 'Quicksand', sans-serif;
+  --font-family: "Quattrocento Sans", sans-serif;
+  --font-family-quicksand: "Quicksand", sans-serif;
 
   --vibrant-orange: #f06543;
   --soft-white: #f8f9fa;
@@ -227,4 +227,8 @@ footer div a:hover {
     text-align: left;
     /* font-size: calc(var(--header-paragraph-fs) / 1.5); */
   }
+}
+
+.no-color {
+  color: var(--vibrant-orange);
 }
