--- a/css/styles/play.css
+++ b/css/styles/play.css
@@ -1,6 +1,6 @@
 :root {
-  --font-family: 'Quattrocento Sans', sans-serif;
-  --font-family-quicksand: 'Quicksand', sans-serif;
+  --font-family: "Quattrocento Sans", sans-serif;
+  --font-family-quicksand: "Quicksand", sans-serif;
 
   --vibrant-orange: #f06543;
   --soft-white: #f8f9fa;
@@ -195,4 +195,8 @@ footer div a:hover {
 }
 .font-family-2 {
   font-family: var(--font-family);
+}
+
+.no-color {
+  color: var(--vibrant-orange);
 }
